# Slalom_Hackathon

Data/: MIT POS data.xlsx  MIT movement data.xlsx
Notebooks/: Untitled.ipynb  pyproject.toml
