[tool.poetry]
name = "analytics slalom hackathon 2022"
version = "0.1.0"
description = ""
authors = ["Manuel Moran"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.22.3"
pandas = "^1.4.1"
scipy = "^1.8.0"
sklearn = "^0.0"
jupyter = "^1.0.0"
openpyxl = "^3.0.9"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
